--- a/src/Main.css
+++ b/src/Main.css
@@ -2,10 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
 }
 
 body {
     background-image: url('./background.png');
+    overflow-x: hidden;
 }
 
 canvas {
@@ -14,140 +16,222 @@ canvas {
     top: 0;
 }
 
-body {
-    overflow-x: hidden;
-    background: linear-gradient(10deg, #060440, #070035);
-    background-size: 400% 400%;
-    -webkit-animation: AnimationName 30s ease infinite;
-    -moz-animation: AnimationName 30s ease infinite;
-    animation: AnimationName 30s ease infinite;
+/*body {*/
+/*    overflow-x: hidden;*/
+/*    background: linear-gradient(10deg, #060440, #070035);*/
+/*    background-size: 400% 400%;*/
+/*    -webkit-animation: AnimationName 30s ease infinite;*/
+/*    -moz-animation: AnimationName 30s ease infinite;*/
+/*    animation: AnimationName 30s ease infinite;*/
+/*}*/
+
+/*@-webkit-keyframes AnimationName {*/
+/*    0% {*/
+/*        background-position: 68% 0%*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 33% 100%*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 68% 0%*/
+/*    }*/
+/*}*/
+
+/*@-moz-keyframes AnimationName {*/
+/*    0% {*/
+/*        background-position: 68% 0%*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 33% 100%*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 68% 0%*/
+/*    }*/
+/*}*/
+
+/*@keyframes AnimationName {*/
+/*    0% {*/
+/*        background-position: 68% 0%*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 33% 100%*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 68% 0%*/
+/*    }*/
+/*}*/
+
+/*.css-selector {*/
+/*    background: linear-gradient(344deg, #161e27, #157577, #157274);*/
+/*    background-size: 600% 600%;*/
+/*    -webkit-animation: UPanim 9s ease infinite;*/
+/*    -moz-animation: UPanim 9s ease infinite;*/
+/*    animation: UPanim 9s ease infinite;*/
+/*}*/
+
+/*@-webkit-keyframes UPanim {*/
+/*    0% {*/
+/*        background-position: 84% 0%*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 17% 100%*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 84% 0%*/
+/*    }*/
+/*}*/
+
+/*@-moz-keyframes UPanim {*/
+/*    0% {*/
+/*        background-position: 84% 0%*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 17% 100%*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 84% 0%*/
+/*    }*/
+/*}*/
+
+/*@keyframes UPanim {*/
+/*    0% {*/
+/*        background-position: 84% 0%*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 17% 100%*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 84% 0%*/
+/*    }*/
+/*}*/
+
+/*.css-selector {*/
+/*    background: linear-gradient(344deg, #161e27, #157577, #157274);*/
+/*    background-size: 600% 600%;*/
+/*    -webkit-animation: UPanim 9s ease infinite;*/
+/*    -moz-animation: UPanim 9s ease infinite;*/
+/*    animation: UPanim 9s ease infinite;*/
+/*}*/
+
+/*@-webkit-keyframes UPanim {*/
+/*    0% {*/
+/*        background-position: 84% 0%*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 17% 100%*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 84% 0%*/
+/*    }*/
+/*}*/
+
+/*@-moz-keyframes UPanim {*/
+/*    0% {*/
+/*        background-position: 84% 0%*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 17% 100%*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 84% 0%*/
+/*    }*/
+/*}*/
+
+/*@keyframes UPanim {*/
+/*    0% {*/
+/*        background-position: 84% 0%*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 17% 100%*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 84% 0%*/
+/*    }*/
+/*}*/
+
+/*#NUCClogo {*/
+/*    position: absolute;*/
+/*    left: -250;*/
+/*}*/
+
+/*HORARIO*/
+.horario {
+    flex: 1 1 80%;
+    min-height: 100vh;
+    text-align: center;
 }
 
-@-webkit-keyframes AnimationName {
-    0% {
-        background-position: 68% 0%
-    }
-    50% {
-        background-position: 33% 100%
-    }
-    100% {
-        background-position: 68% 0%
-    }
+.eventos {
+    display: grid;
+    grid-template-rows: repeat(30, 1fr);
+    grid-template-columns: repeat(13, 1fr);
+    grid-gap: 5px;
+    height: 1200px;
 }
 
-@-moz-keyframes AnimationName {
-    0% {
-        background-position: 68% 0%
-    }
-    50% {
-        background-position: 33% 100%
-    }
-    100% {
-        background-position: 68% 0%
-    }
+.eventos-item {
+    background: #117d7e;
+    color: #ececec;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
 }
 
-@keyframes AnimationName {
-    0% {
-        background-position: 68% 0%
-    }
-    50% {
-        background-position: 33% 100%
-    }
-    100% {
-        background-position: 68% 0%
-    }
+.eventos-item.hour {
+    grid-row: span 1;
+    grid-column: span 2;
+    padding-top: 6%;
 }
 
-.css-selector {
-    background: linear-gradient(344deg, #161e27, #157577, #157274);
-    background-size: 600% 600%;
-    -webkit-animation: UPanim 9s ease infinite;
-    -moz-animation: UPanim 9s ease infinite;
-    animation: UPanim 9s ease infinite;
+.eventos-item.normal {
+    grid-row: span 1;
+    grid-column: span 5;
 }
 
-@-webkit-keyframes UPanim {
-    0% {
-        background-position: 84% 0%
-    }
-    50% {
-        background-position: 17% 100%
-    }
-    100% {
-        background-position: 84% 0%
-    }
+.eventos-item.half {
+    grid-row: span 1;
+    grid-column: span 3;
 }
 
-@-moz-keyframes UPanim {
-    0% {
-        background-position: 84% 0%
-    }
-    50% {
-        background-position: 17% 100%
-    }
-    100% {
-        background-position: 84% 0%
-    }
+.eventos-item.metyis {
+    grid-row: span 5;
+    grid-column: span 2;
 }
 
-@keyframes UPanim {
-    0% {
-        background-position: 84% 0%
-    }
-    50% {
-        background-position: 17% 100%
-    }
-    100% {
-        background-position: 84% 0%
-    }
+.eventos-item.normal-takes-2 {
+    grid-row: span 2;
+    grid-column: span 5;
 }
 
-.css-selector {
-    background: linear-gradient(344deg, #161e27, #157577, #157274);
-    background-size: 600% 600%;
-    -webkit-animation: UPanim 9s ease infinite;
-    -moz-animation: UPanim 9s ease infinite;
-    animation: UPanim 9s ease infinite;
+.eventos-item.normal-takes-3 {
+    grid-row: span 3;
+    grid-column: span 5;
 }
 
-@-webkit-keyframes UPanim {
-    0% {
-        background-position: 84% 0%
-    }
-    50% {
-        background-position: 17% 100%
-    }
-    100% {
-        background-position: 84% 0%
-    }
+.eventos-item.normal-takes-4 {
+    grid-row: span 4;
+    grid-column: span 5;
 }
 
-@-moz-keyframes UPanim {
-    0% {
-        background-position: 84% 0%
-    }
-    50% {
-        background-position: 17% 100%
-    }
-    100% {
-        background-position: 84% 0%
-    }
+.eventos-item.normal-takes-5 {
+    grid-row: span 5;
+    grid-column: span 5;
 }
 
-@keyframes UPanim {
-    0% {
-        background-position: 84% 0%
-    }
-    50% {
-        background-position: 17% 100%
-    }
-    100% {
-        background-position: 84% 0%
-    }
+.eventos-item.normal-takes-7 {
+    grid-row: span 7;
+    grid-column: span 5;
 }
 
-#NUCClogo {
-    position: absolute;
-    left: -250;
+
+.eventos-item.empty {
+    opacity: 0;
+}
+
+@media (max-width: 1000px) {
+    .eventos-item {
+        font-size: 9px;
+    }
 }
